Added some elements

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>The Gang</title>
-	<link rel="stylesheet" href="style.css">
+	<title>Sanwil Design</title>
 </head>
 <body>
-
+	<h1>Sanwil Design</h1>
+	<p>Welcome to the official Sanwil Design website!</p>
+	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me I'm a link</a>
+	<p>My name is: <br> William Sannehed</p>
 </body>
 </html>
