--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,17 @@
 	<title>Sanwil Design</title>
 </head>
 <body>
-	<h1>Sanwil Design</h1>
-	<p>Welcome to the official Sanwil Design website!</p>
-	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me I'm a link</a>
-	<p>My name is: <br> William Sannehed</p>
+	<!-- Header element -->
+	<header>
+		<img src="Editwartransformations2022.jpg">
+		<h1>William Sannehed</h1>
+	</header>
+
+	<!-- main element -->
+	<main>
+		<h2>About me</h2>
+		<p>I'm a graphic designer from Sweden currently studying at the technical program in Sweden. Here is my first photo manipulation artwork ever!</p>
+
+	</main>
 </body>
 </html>
