--- a/Index.html
+++ b/Index.html
@@ -2,19 +2,43 @@
 <html>
 <head>
 	<title>Sanwil Design</title>
+	<link rel="icon" href="https://cdn.dribbble.com/users/60166/screenshots/15010083/sunset_sunrise_1_4x.jpg">
 </head>
 <body>
 	<!-- Header element -->
 	<header>
-		<img src="Editwartransformations2022.jpg">
+		<img src="Ehem.jpg">
 		<h1>William Sannehed</h1>
 	</header>
 
 	<!-- main element -->
 	<main>
 		<h2>About me</h2>
-		<p>I'm a graphic designer from Sweden currently studying at the technical program in Sweden. Here is my first photo manipulation artwork ever!</p>
+		<p>I'm a graphic designer from Sweden currently studying at the technical program in Sweden. I'm absolutely not just trying to fill this empty space with random text...</p>
+		<img src="Editwartransformations2022.jpg">
+		<p>Here is my first photo manipulation ever!</p>
 
+		<!-- Characteristics -->
+		<h2>Here are some of my characteristics</h2>
+		<ol>
+			<li>I'm a awesome</li>
+			<li>I'm really good at photoshop</li>
+			<li>I'm super cool</li>
+		</ol>
+
+		<!-- Top artworks -->
+		<h2>My artworks</h2>
+		<p>I have made some awesome artworks during the last year. Here are some of my best. Klick on the links below to read more. </p>
+		<ul>
+			<li><a target="_blank" href="https://google.com">Google</a></li>
+			<li><a target="_blank" href="https://google.com">Google</a></li>
+			<li><a target="_blank" href="https://google.com">Google</a></li>
+		</ul>
 	</main>
+
+	<!-- Footer element -->
+	<footer>
+		<p>This site was created during a Skillshare class. &copy; William</p>
+	</footer>
 </body>
 </html>
