started writing css
began writing css althougg it seems like it's not connected to the html file.

--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,12 @@
 <head>
 	<title>Sanwil Design</title>
 	<link rel="icon" href="https://cdn.dribbble.com/users/60166/screenshots/15010083/sunset_sunrise_1_4x.jpg">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<!-- Header element -->
 	<header>
-		<img src="Ehem.jpg">
+		<img src="https://images.squarespace-cdn.com/content/v1/582cb094b3db2b861543782d/1545250473494-ZQBUEXPIQ04PLGW32R98/DERAY+NPG+2K.jpg?format=1000w">
 		<h1>William Sannehed</h1>
 	</header>
 
@@ -15,7 +16,7 @@
 	<main>
 		<h2>About me</h2>
 		<p>I'm a graphic designer from Sweden currently studying at the technical program in Sweden. I'm absolutely not just trying to fill this empty space with random text...</p>
-		<img src="Editwartransformations2022.jpg">
+		<img src="https://images.squarespace-cdn.com/content/v1/582cb094b3db2b861543782d/1545250473494-ZQBUEXPIQ04PLGW32R98/DERAY+NPG+2K.jpg?format=1000w">
 		<p>Here is my first photo manipulation ever!</p>
 
 		<!-- Characteristics -->
